# Filend

./: Cargo.toml  PROJECT_PLAN.md  README.md  TODO.md
src/: about_window.rs  about_window.ui  about_window.ui~  main.rs  main_window.rs  main_window.ui  server.rs  state.rs  ui_framework.rs
src/state/: gui.rs  local_files.rs
