[package]
name = "filend"
version = "0.1.0"
authors = ["hgonomeg <hgonomeg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
preferences = "1.1"
actix-web = "3"
serde = "0.9"
serde_derive = "0.9"
glib = "0.10"
rand = "0.8"
[dependencies.gtk]
version = "0.9"
features = ["v3_16"]
[dependencies.gio]
version = ""
features = ["v2_44"]
