[package]
name = "filend"
version = "0.2.0-alpha"
authors = ["hgonomeg <hgonomeg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
preferences = { git = "https://github.com/andybarron/preferences-rs" }
actix-web = "4"
actix-rt = "2"
# actix = "0.10"
actix-files = "0.6"
serde = "1"
serde_derive = "1"
glib = "0.15"
rand = "0.8"
crossbeam-channel = "0.5"
# futures-executor = "0.3"
[dependencies.gtk]
version = "0.15"
features = ["v3_24"]
[dependencies.gio]
version = "0.15"
features = ["v2_70"]
